новое выделение файлов

--- a/app/static/css/mobile/addFileMenu.1.css
+++ b/app/static/css/mobile/addFileMenu.1.css
@@ -1,4 +1,20 @@
 
+.addFileMenu {
+  position: fixed;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  height: 140px;
+  background-color: var(--bg-color);
+  border-radius: 8px 8px 0 0;
+  z-index: 4;
+}
+
+.addFileMenu_button {
+  position: absolute;
+  background-color: var(--hover-color);
+}
+
 .small_button_style {
   position: absolute;
   height: 35px;
