--- a/app/static/css/mobile/fileinfoBar.1.css
+++ b/app/static/css/mobile/fileinfoBar.1.css
@@ -281,109 +281,6 @@
   border-radius: 8px;
 }
 
-/* list files */
-.file_activity_button {
-  position: absolute;
-  left: 5px;
-  top: 7px;
-}
-
-.file_list_info_div {
-  position: absolute;
-  left: 0px;
-  top: 35px;
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid var(--main-border-color);
-  border-bottom: 1px solid var(--main-border-color);
-  background-color: var(--bg-color);
-}
-
-.file_list_download_button {
-  position: absolute;
-  left: 0px;
-  top: 114px;
-  width: 50%;
-  height: 35px;
-  border-top: 1px solid var(--main-border-color);
-  border-bottom: 1px solid var(--main-border-color);
-  border-right: 1px solid var(--main-border-color);
-  background-color: var(--bg-color);
-
-  cursor: pointer;
-}
-
-.file_list_download_button:hover {
-  background-color: var(--hover-color);
-}
-
-.file_list_delete_button {
-  position: absolute;
-  left: 50%;
-  top: 114px;
-  width: 50%;
-  height: 35px;
-  border-top: 1px solid var(--main-border-color);
-  border-bottom: 1px solid var(--main-border-color);
-  border-left: 1px solid var(--main-border-color);
-  background-color: var(--bg-color);
-
-  cursor: pointer;
-}
-
-.file_list_delete_button:hover {
-  background-color: var(--main-red-color);
-}
-
-/**/
-.file_list_paste_button {
-  position: absolute;
-  left: 0px;
-  top: 115px;
-  width: 50%;
-  height: 35px;
-  border-right: 1px solid var(--main-border-color);
-  border-bottom: 1px solid var(--main-border-color);
-  background-color: var(--bg-color);
-  cursor: pointer;
-}
-
-.file_list_paste_button:hover {
-  background-color: var(--hover-color);
-}
-
-.file_list_copy_button {
-  position: absolute;
-  left: 50%;
-  top: 187px;
-  width: 50%;
-  height: 35px;
-  border-left: 1px solid var(--main-border-color);
-  border-bottom: 1px solid var(--main-border-color);
-  background-color: var(--bg-color);
-  cursor: pointer;
-}
-
-.file_list_copy_button:hover {
-  background-color: var(--hover-color);
-}
-
-.file_list_cut_button {
-  position: absolute;
-  left: 50%;
-  top: 151px;
-  width: 50%;
-  height: 35px;
-  border-left: 1px solid var(--main-border-color);
-  border-bottom: 1px solid var(--main-border-color);
-  background-color: var(--bg-color);
-  cursor: pointer;
-}
-
-.file_list_cut_button:hover {
-  background-color: var(--hover-color);
-}
-
 .fileDescription {
   position: absolute;
   resize: none;
@@ -418,4 +315,63 @@
   height: 80px;
   border-top: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
+}
+
+/*----------------------------------------------------------------------------*/
+
+/* list files */
+.file_activity_button {
+  position: absolute;
+  left: 5px;
+  top: 7px;
+}
+
+.file_list_info_div {
+  position: absolute;
+  left: 30px;
+  top: 0px;
+  width: 100%;
+}
+
+.file_list_close_button {
+  position: absolute;
+  right: 0px;
+  top: -2px;
+  height: 35px;
+}
+
+.file_list_download_button {
+  position: absolute;
+  right: 40px;
+  top: 3px;
+  height: 35px;
+}
+
+.file_list_delete_button {
+  position: absolute;
+  right: 145px;
+  top: 3px;
+  height: 35px;
+}
+
+/**/
+.file_list_paste_button {
+  position: absolute;
+  right: 50px;
+  top: 3px;
+  height: 35px;
+}
+
+.file_list_copy_button {
+  position: absolute;
+  right: 75px;
+  top: 3px;
+  height: 35px;
+}
+
+.file_list_cut_button {
+  position: absolute;
+  right: 110px;
+  top: 3px;
+  height: 35px;
 }
