--- a/app/static/css/path_select.1.css
+++ b/app/static/css/path_select.1.css
@@ -14,24 +14,17 @@
 
 .path_select_button {
   position: fixed;
-  /* background-color: var(--top-color); */
-
   top: 0px;
   left: 350px;
   width: 150px;
   height: 45px;
-
   border-left: 1px solid var(--top-border-color);
   border-right: 1px solid var(--top-border-color);
-  /* border-bottom: 1px solid var(--top-border-color); */
-
   cursor: pointer;
 }
 
 .path_select_list_div {
   position: fixed;
-  /*background-color: var(--top-color);*/
-
   top: 46px;
   bottom: 0px;
   left: 350px;
@@ -40,9 +33,9 @@
 
 .path_list_element {
   background-color: var(--left-color);
-  border-bottom: 1px solid var(--top-border-color);
-  border-left: 1px solid var(--top-border-color);
-  border-right: 1px solid var(--top-border-color);
+  border-bottom: 1px solid var(--main-border-color);
+  border-left: 1px solid var(--main-border-color);
+  border-right: 1px solid var(--main-border-color);
 
   width: 200px;
   height: 45px;
